--- a/Public/assets/custom.css
+++ b/Public/assets/custom.css
@@ -92,3 +92,9 @@ section.ui.posts-section {
     visibility: hidden;
 }
 
+@media (max-width: 640px) {
+    section.very.padded.segment.posts-section {
+        padding-left: 1.4em;
+        padding-right: 1.4em;
+    }
+}
